# Riddler

./: .env.example  .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  LICENSE.md  NovaReel.md  README.md  RESTRUCTURING_PLAN.md  Zulko-moviepy.txt  config.json  config.py  docs.md  geographic_riddles.py  instructions.md  liscense-moving.md  main.py  openai-openai-python.txt  pyproject.toml  requirements.txt  response_schema.json  riddle_content.py  s3_policy.json  script.revid  setup.sh  test_tts.py  utils.py
.cursor/rules/: coding-rule.mdc
backend/: .env.example  main.py  pytest.ini  setup.sh
backend/config/: config.py
backend/examples/: multi_riddles.json  riddle.json
backend/utils/: cache.py  validators.py
config/: bad_words.txt  config.json  config.py  constants.py  exceptions.py  schema.py
core/: app.py  application.py  cli.py  exceptions.py  riddler.py  service_factory.py  types.py
docs/: advanced_usage.md  architecture.md  commands.md  configuration.md  development.md  features.md  getting-started.md  index.md  quickstart.md  troubleshooting.md
examples/: logic_riddle.json  riddle.json
prompts/: commentary.txt  educational.txt  fun_facts.txt  riddle.txt
services/: audio.py  captions.py  openai_service.py  presentation_service.py  riddle.py  tts.py  tts_service.py  video.py  video_service.py
services/audio/: __init__.py  base.py  (+1 more)
tests/: README.md  conftest.py  test_basic.py
utils/: audio_generator.py  cache.py  decorators.py  helpers.py  logger.py  metrics.py  validators.py  video_effects_engine.py  video_processor.py
(+67 files in other folders)
